# efs-pinecan-poc

./: .gitignore  .gitmodules  BuildConfigs.json  README.md  README2.md  configdump.h
common/: common.c
common/boards/stm32l4/: dronecan.c  dronecan.h
common/libcanard/: README.md
dsdl/: CMakeLists.txt  Makefile  README.md
dsdl/custom/warg/: 800.SetControlState.uavcan  AssertMaster.uavcan  PacketSync.uavcan
pinecan/: CMakeLists.txt  TODO.md  pinecan.c  pinecan.h  pinecan_internals.h
pinecan/boards/: README.md
pinecan/boards/stm32l4/: pinecanBoard.c  pinecanBoard.h  pinecanBoard_internals.h
pinecan/bootloader/: README.md
targets/: README.md
targets/example/: DELETE.md  README.md
targets/single_servo_driver/rev1/: .cproject  .gitignore  .mxproject  .project  6s_servo.ioc  BuildConfig.json  CMakeLists.txt  STM32L431XX_FLASH.ld  servo.ioc
targets/single_servo_driver/rev1/Core/Inc/: main.h  pinecan_handlers.h  stm32l4xx_it.h
targets/single_servo_driver/rev1/Core/Inc/can/: can.h
targets/single_servo_driver/rev1/Core/Inc/servo/: servo.h
targets/single_servo_driver/rev1/Core/Src/: main.c  stm32l4xx_hal_msp.c
targets/single_servo_driver/rev1/Core/Src/can/: can.c
targets/single_servo_driver/rev1/Core/Src/servo/: servo.c
targets/single_servo_driver/rev1/cmake/: starm-clang.cmake
targets/single_servo_driver/rev1/cmake/stm32cubemx/: CMakeLists.txt
targets/single_servo_driver/rev1/dronecan/: rx_handlers_config.h
